--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="GWA calculator, General Weighted Average, academic performance, grade calculator, student tool, Philippines education, GPA calculator, weighted average calculator, free online calculator" />
     <meta name="author" content="GWA Calculator" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <meta name="google-adsense-account" content="ca-pub-7362369191539334">
     <link rel="canonical" href="https://mygwacalculator.com" />
     
     <!-- Preconnect to external domains for faster loading -->
