--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GWA Calculator - Compute Your General Weighted Average | Free Online Tool</title>
+    <title>GWA Calculator - Compute Your General Weighted Average | philippines</title>
     <meta name="google-site-verification" content="RKeet1qEU8y3TAO5WyV6pxOwBr1d8gSn-VVH62fcblI" />
     <meta name="description" content="Calculate your General Weighted Average (GWA) easily with our free online tool. Perfect for students to track their academic performance. Fast, accurate, and mobile-friendly." />
     <meta name="keywords" content="GWA calculator, General Weighted Average, academic performance, grade calculator, student tool, Philippines education, GPA calculator, weighted average calculator, free online calculator" />
