feat: Implement multi-language support (Filipino) and SEO enhancements

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-adsense-account" content="ca-pub-6741872650488317">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GWA Calculator - Compute Your General Weighted Average | philippines</title>
+    <title>GWA Calculator - Compute Your General Weighted Average | Philippines</title>
     <meta name="google-site-verification" content="RKeet1qEU8y3TAO5WyV6pxOwBr1d8gSn-VVH62fcblI" />
     <meta name="description" content="Calculate your General Weighted Average (GWA) easily with our free online tool. Perfect for students to track their academic performance. Fast, accurate, and mobile-friendly." />
     <meta name="keywords" content="GWA calculator, General Weighted Average, academic performance, grade calculator, student tool, Philippines education, GPA calculator, weighted average calculator, free online calculator" />
@@ -12,6 +11,8 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="google-adsense-account" content="ca-pub-3488894749741987">
     <link rel="canonical" href="https://mygwacalculator.com" />
+    <link rel="alternate" hreflang="en-PH" href="https://mygwacalculator.com" />
+    <link rel="alternate" hreflang="en" href="https://mygwacalculator.com" />
     
     <!-- Preconnect to external domains for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +69,7 @@
       "browserRequirements": "Requires JavaScript",
       "softwareVersion": "1.0",
       "dateCreated": "2024-01-01",
-      "dateModified": "2024-06-24",
+      "dateModified": "2026-02-12",
       "offers": {
         "@type": "Offer",
         "price": "0",
@@ -92,12 +93,7 @@
         "@type": "SoftwareApplication",
         "name": "GWA Calculator",
         "operatingSystem": "Web Browser",
-        "applicationCategory": "Education",
-        "aggregateRating": {
-          "@type": "AggregateRating",
-          "ratingValue": "4.8",
-          "ratingCount": "1250"
-        }
+        "applicationCategory": "Education"
       }
     }
     </script>
